support "Symfony\Component\Routing\Attribute\Route" for method completion